--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <meta charset="utf-8" />
-    <title>Smashing HTML5!</title>
-
-    <link rel="stylesheet" href="css/reset.css" type="text/css" />
-    <link rel="stylesheet" href="css/main.css" type="text/css" />
+    <meta charset="utf-8">
+    <title>Tweeting Nodeshell</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ember.js/1.9.1/ember.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ember-data.js/1.0.0-beta.14.1/ember-data.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>-->
   </head>
   <body>
-    <h1>THIS IS A WEBPAGE</h1>
+    <section id="twitterapp">
+      <header id="header">
+        <h1>Tweet Useless Things!</h1>
+      </header>
+      <input type="text" size="45" id="tweetpost" placeholder="Bury your thoughts here. Press enter when done." />
+      <section id="main">
+        <h2>Here's are your tweets being spit back at you:</h2>
+        <ul id="history">
+        </ul>
+      </section>
+
+    </section>
+    <script src="./js/main.js"></script>
   </body>
 </html>
